--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_USER_WP=jaroAdmin
-VITE_PASSWORD_WP="your_password"
+VITE_USER_WP=admin
+VITE_PASSWORD_WP=Dei5uTEGzmQqmJBZyEDz
+VITE_PUBLIC_SERVICE_ID=service_nfi5dzq
+VITE_PUBLIC_TEMPLATE_ID=template_xkwkwj5
+VITE_PUBLIC_PUBLIC_KEY=8R7EpCYICZiaQkFpj
